Fix menu links z-index

--- a/css/style.scss
+++ b/css/style.scss
@@ -60,12 +60,15 @@ html, body{
   gap: 30px;
   transition-duration: 0.2s;
   &__link {
+    position: relative;
+    z-index: 10;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     font-weight: 700;
     letter-spacing: 2px;
     text-transform: uppercase;
     color: var(--main-color);
+    &:hover{color: var(--second-bg-color)}
   }
 }
 .burger {
@@ -101,6 +104,8 @@ html, body{
 
 .menu-mobile{
   display: none;
+  position: absolute;
+  z-index: 10;
 }
 @media (max-width: 479px) {
   .burger{display: block;}
@@ -109,7 +114,6 @@ html, body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: absolute;
     top:0;
     right: -100%;
     height: 100%;
